# FFmpeg-2024

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/better/year/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h  MediaPlayer.h  PlayerWrapper.cpp  PlayerWrapper.h
app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/audio/: AudioFrame.cpp  AudioFrame.h  AudioRender.h  OpenSLRender.cpp  OpenSLRender.h
app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  VideoRender.h
app/src/main/cpp/util/: ImageDef.h  LogUtil.h
app/src/main/java/com/better/year/: MainActivity.java
app/src/main/java/com/better/year/activity/: NativeMediaPlayerActivity.java
app/src/main/java/com/better/year/adapter/: MyRecyclerViewAdapter.java
app/src/main/java/com/better/year/media/: FFMediaPlayer.java  MySurfaceView.java
app/src/main/java/com/better/year/util/: CommonUtils.java
app/src/main/res/layout/: activity_native_media_player.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/better/year/: ExampleUnitTest.java
check_cpp_crash/: Check.md
